created adminDashboard and implemented guards
